--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/385841539/VueStudy/issues"
   },
-  "homepage": "https://github.com/385841539/VueStudy#readme"
+  "homepage": "https://github.com/385841539/VueStudy#readme",
+  "dependencies": {
+    "axios": "^0.24.0"
+  }
 }
