--- a/vue-shop-heima/package.json
+++ b/vue-shop-heima/package.json
@@ -11,13 +11,15 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "file-saver": "^2.0.5",
     "less-loader": "^6.0.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-table-with-tree-grid": "^0.2.4",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.18.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -35,6 +37,9 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^4.1.2",
+    "script-loader": "^0.7.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
